# asrt

./: .dockerignore  .gitignore  .gitmodules  COPYING  Dockerfile  INSTALL.md  README.md  allTestSuite.py  requirements.txt  setenv  setup.cfg  setup.py
asrt/: allTestSuite.py  setenv
asrt/common/: AsrtConstants.py  AsrtSubprocess.py  AsrtUtility.py  Classifier.py  ClassifierWord.py  Cluster.py  DataList.py  DataMap.py  DataPreparationAPI.py  Document.py  LoggingSetup.py  MyFile.py  Punctuation.py  RegularExpressionList.py  Rule.py  TextCluster.py  TextDocument.py  TextRepresentation.py  ioread.py
asrt/config/: AsrtConfig.py
common/: AsrtConstants.py  AsrtSubprocess.py  AsrtUtility.py  Classifier.py  DataMap.py  DataPreparationAPI.py  LoggingSetup.py  MyFile.py  Punctuation.py  Rule.py  TextCluster.py  TextDocument.py  TextRepresentation.py  ioread.py
common/english/: FormulaNumber.py
common/formula/: FormulaLMPreparation.py  FormulaRegularExpression.py
common/french/: FormulaNumber.py
common/german/: FormulaNumber.py  Number.py
common/tasks/: AsrtTask.py  TaskImportDocument.py
common/unit_test/: CommonTestSuite.py  DataPreparationAPIUnitTest.py  IoreadUnitTest.py  ListUnitTest.py  PunctuationUnitTest.py  TaskUnitTest.py
config/: AsrtConfig.py  AsrtConfig.sh
data-preparation/bash/: run_data_preparation.sh
data-preparation/python/: run_apply_regex.py  run_data_preparation.py  run_data_preparation_individual_files.py  run_data_preparation_task.py  run_test_regex.py
debian/: control  rules
docker-example/: research.txt
scripts/: allTestSuite.py
(+136 files in other folders)
