[metadata]
name = asrt
version = 1.0
description = Text unformatting library.
keywords = Text, unformatting, processing
license = BSD 3-Clause License
classifiers = [
    License :: OSI Approved :: BSD License,
    Programming Language :: Python :: 3
    ]
[options]
packages = ['asrt']
zip_safe = False
include_package_data = True
install_requires =
    nltk
    roman
    num2words
    unicodecsv
scripts =
    asrt/data-preparation/bash/run_data_preparation.sh
    asrt/data-preparation/python/run_apply_regex.py
    asrt/data-preparation/python/run_data_preparation_individual_files.py
    asrt/data-preparation/python/run_data_preparation.py
    asrt/data-preparation/python/run_data_preparation_task.py
    asrt/data-preparation/python/run_test_regex.py
    asrt/examples/bash/run_data_preparation.sh
    asrt/examples/bash/run_data_preparation_task.sh
    asrt/config/AsrtConfig.sh
    asrt/setenv
